--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -66,8 +66,25 @@
 }
 
 .i-img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  border-radius: 100%;
+  width: 300px;
+  height: 300px;
+  border-radius: 200px;
+}
+
+.first {
+  position: relative;
+  top: 220px;
+  left: 30px;
+
+}
+
+.second {
+  position: relative;
+  top: 150px;
+  left: 70px;
+}
+
+.memoji {
+  margin-top: 110px;
+  margin-left: 250px;
 }
