--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,21 +1,37 @@
 .e {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     display: flex;
     align-items: center;
+    /* margin-top: 70px; */
     margin-bottom: 70px;
-  
 }
 
 .e-left {
     flex: 1;
+    margin-top: 200px;
 }
 
 .e-right {
     flex: 1;
+    margin-top: 200px;
+
 }
 
 .e-wrapper {
     width: 60%;
-    height: 70vh;
-  }
+    height: 40vh;
+}
+
+.open-text {
+    margin-left: 100px;
+    width: 500px;
+}
+
+/* .jobDesc {
+    height: 200px;
+    width: 200px;
+    border: 1px whitesmoke solid;
+    background-color: whitesmoke;
+    box-shadow: 5px 5px gray;
+} */
