--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,28 +1,40 @@
 .p {
-  width: 100%;
-  height: 100vh;
+  width: 60vw;
+  height: 80vh;
   display: flex;
   align-items: center;
-  margin-bottom: 70px;
+  margin-bottom: 100px;
+  flex-direction: column;
 }
 
-.p-left {
-  flex: 2;
+.pro-names {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  margin-left: 700px;
 }
 
-.p-right {
-  flex: 1;
+.p-name {
+  width: 200px;
+  margin-top: 50px;
+  margin-left: 10px;
+  margin-bottom: 50px;
 }
 
-.p-wrapper {
-  width: 60%;
-  height: 70vh;
-  border-radius: 30px;
-}
-
-.links {
+.p-name:hover {
+  color: green;
   cursor: pointer;
+  text-decoration: underline;
 }
+
+.p-info {
+  width: 50%;
+  position: relative;
+  bottom: 50%;
+  margin-left: 50px;
+  text-align: center;
+}
+
 
 .links:hover {
   color: green;
