--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -29,6 +29,24 @@
     margin-top: 50px;
 }
 
+.arrows {
+    margin-top: 50px;
+    margin-left: 300px;
+    position: relative;
+    animation-name: direct;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes direct {
+    0%   { right: 0px; }
+    25%  { right: 100;}
+    50%  { right: 150px;}
+    /* 75%  { left: 100px; }
+    100% { right: 150px; } */
+  }
+  
+
 /* .jobDesc {
     height: 200px;
     width: 200px;
