--- a/src/components/timeline/TimeLine.css
+++ b/src/components/timeline/TimeLine.css
@@ -3,11 +3,24 @@
     font-weight: 600;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
+    animation-name: companyName;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
+
+@keyframes companyName {
+    0%   {color: blueviolet;}
+    25%  {color:yellow; }
+    50%  {color:blue; }
+    75%  {color:green;}
+    100% {color:red; }
+  }
 
 .company:hover {
     color: purple;
 }
+
+
 
 
 
